Squashing 3 commits for Bug fix

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background: #f0f0f0;
+  background: #f0f0f1;
 }
 
 .calculator {
